[package]
name = "nv"
version = "0.1.0"
authors = ["Daniel Robertson <dan.robertson@anidata.org>"]
license = "MPL-2.0"
repository = "https://github.com/danlrobertson/nv-rs"
description = """
Simple intuitive Rust bindings for the FreeBSD name/value pairs library
"""
build = "build.rs"
readme = "README.md"
keywords = ["FreeBSD", "name/vale pair"]
